--- a/app/views/main-page/main-page.css
+++ b/app/views/main-page/main-page.css
@@ -146,6 +146,7 @@
     animation-fill-mode: forwards;
     animation-iteration-count: 1;
     animation-timing-function: cubic-bezier(0.25, 0.1, 0.25, 1);
+    padding-top: 10;
 }
 
 .default-background {
